--- a/test1-2.yaml
+++ b/test1-2.yaml
@@ -41,7 +41,7 @@ paths:
       operationId: get-users-userId
       description: Retrieve the information of the user with the matching user ID.
       x-stoplight:
-        id: gbv7wyghr8cii
+        id: n0qmwflmbzovq
     patch:
       summary: Update User Information
       operationId: patch-users-userId
@@ -95,7 +95,7 @@ paths:
                   dateOfBirth: '1985-10-02'
         description: Patch user properties to update.
       x-stoplight:
-        id: 20jmwmmlebgwb
+        id: n0qmwflmbzovq
   /user:
     post:
       summary: Create New User
@@ -171,15 +171,15 @@ components:
           type: integer
           description: Unique identifier for the given user.
           x-stoplight:
-            id: f3tp0ygr2r85y
+            id: 1cxgqx98r0lck
         firstName:
           type: string
           x-stoplight:
-            id: f72xn2udxwwq0
+            id: 1cxgqx98r0lck
         lastName:
           type: string
           x-stoplight:
-            id: x51cvj2u54wdr
+            id: 1cxgqx98r0lck
         email:
           type: string
           format: email
@@ -190,12 +190,12 @@ components:
           format: date
           example: '1997-10-31'
           x-stoplight:
-            id: 6fpnpajettvzz
+            id: q8im0me9su2qj
         emailVerified:
           type: boolean
           description: Set to true if the user's email has been verified.
           x-stoplight:
-            id: hcz7yq7x0tys3
+            id: q8im0me9su2qj
         createDate:
           type: string
           format: date
