--- a/test-3.1.yaml
+++ b/test-3.1.yaml
@@ -1,22 +1,24 @@
 openapi: 3.1.0
+x-stoplight:
+  id: n0qmwflmbzovq
 info:
-  version: '1.0'
   title: test-3.1
+  version: '1.0'
+  description: test1
 servers:
   - url: 'http://localhost:3000'
 paths:
   '/users/{userId}':
+    parameters:
+      - schema:
+          type: integer
+        name: userId
+        in: path
+        required: true
+        description: Id of an existing user.
     get:
       summary: Get User Info by User ID
-      description: Retrieve the information of the user with the matching user ID.
-      operationId: get-users-userId
-      parameters:
-        - name: userId
-          in: path
-          description: Id of an existing user.
-          required: true
-          schema:
-            type: integer
+      tags: []
       responses:
         '200':
           description: User Found
@@ -36,21 +38,36 @@ paths:
                     signUpDate: '2019-08-24'
         '404':
           description: User Not Found
-      servers:
-        - url: 'http://localhost:3000'
+      operationId: get-users-userId
+      description: Retrieve the information of the user with the matching user ID.
+      x-stoplight:
+        id: n0qmwflmbzovq
     patch:
       summary: Update User Information
-      description: Update the information of an existing user.
       operationId: patch-users-userId
-      parameters:
-        - name: userId
-          in: path
-          description: Id of an existing user.
-          required: true
-          schema:
-            type: integer
+      responses:
+        '200':
+          description: User Updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+              examples:
+                Updated User Rebecca Baker:
+                  value:
+                    id: 13
+                    firstName: Rebecca
+                    lastName: Baker
+                    email: rebecca@gmail.com
+                    dateOfBirth: '1985-10-02'
+                    emailVerified: false
+                    createDate: '2019-08-24'
+        '404':
+          description: User Not Found
+        '409':
+          description: Email Already Taken
+      description: Update the information of an existing user.
       requestBody:
-        description: Patch user properties to update.
         content:
           application/json:
             schema:
@@ -76,36 +93,35 @@ paths:
                 value:
                   lastName: Baker
                   dateOfBirth: '1985-10-02'
+        description: Patch user properties to update.
+      x-stoplight:
+        id: 20jmwmmlebgwb
+  /user:
+    post:
+      summary: Create New User
+      operationId: post-user
       responses:
         '200':
-          description: User Updated
+          description: User Created
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
               examples:
-                Updated User Rebecca Baker:
+                New User Bob Fellow:
                   value:
-                    id: 13
-                    firstName: Rebecca
-                    lastName: Baker
-                    email: rebecca@gmail.com
-                    dateOfBirth: '1985-10-02'
+                    id: 12
+                    firstName: Bob
+                    lastName: Fellow
+                    email: bob.fellow@gmail.com
+                    dateOfBirth: '1996-08-24'
                     emailVerified: false
-                    createDate: '2019-08-24'
-        '404':
-          description: User Not Found
+                    createDate: '2020-11-18'
+        '400':
+          description: Missing Required Information
         '409':
           description: Email Already Taken
-      servers:
-        - url: 'http://localhost:3000'
-  /user:
-    post:
-      summary: Create New User
-      description: Create a new user.
-      operationId: post-user
       requestBody:
-        description: Post the necessary fields for the API to create a new user.
         content:
           application/json:
             schema:
@@ -132,107 +148,16 @@ paths:
                   lastName: Fellow
                   email: bob.fellow@gmail.com
                   dateOfBirth: '1996-08-24'
-      responses:
-        '200':
-          description: User Created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-              examples:
-                New User Bob Fellow:
-                  value:
-                    id: 12
-                    firstName: Bob
-                    lastName: Fellow
-                    email: bob.fellow@gmail.com
-                    dateOfBirth: '1996-08-24'
-                    emailVerified: false
-                    createDate: '2020-11-18'
-        '400':
-          description: Missing Required Information
-        '409':
-          description: Email Already Taken
-      servers:
-        - url: 'http://localhost:3000'
-    get:
-      summary: Your GET endpoint
-      operationId: get-user
-      requestBody:
-        content:
-          application/x.nn.v3.0.0+json:
-            schema:
-              type: object
-              properties:
-                mail1:
-                  $ref: '#/components/schemas/emailallmandatory'
-                mail2:
-                  $ref: '#/components/schemas/emailallmandatory_2'
-      responses: {}
-      servers:
-        - url: 'http://localhost:3000'
-    head:
-      summary: Your HEAD endpoint
-      operationId: head-user
-      requestBody:
-        content:
-          application/x.nn.v3.0.0+json:
-            schema:
-              type: object
-              properties:
-                email:
-                  $ref: '#/components/schemas/emailallmandatory'
-      responses: {}
-      servers:
-        - url: 'http://localhost:3000'
-    trace:
-      summary: Your TRACE endpoint
-      operationId: trace-user
-      requestBody:
-        content:
-          application/x.nn.v3.0.0+json:
-            schema:
-              type: object
-              properties:
-                email:
-                  $ref: '#/components/schemas/emailallmandatory'
-      responses: {}
-      servers:
-        - url: 'http://localhost:3000'
+        description: Post the necessary fields for the API to create a new user.
+      description: Create a new user.
+      x-stoplight:
+        id: 20jmwmmlebgwb
 components:
   schemas:
     User:
-      type: object
       title: User
-      properties:
-        id:
-          type: integer
-          description: Unique identifier for the given user.
-        firstName:
-          type: string
-        lastName:
-          type: string
-        email:
-          type: string
-          format: email
-        dateOfBirth:
-          type: string
-          format: date
-          examples:
-            - '1997-10-31'
-        emailVerified:
-          type: boolean
-          description: Set to true if the user's email has been verified.
-        createDate:
-          type: string
-          description: The date that the user was created.
-          format: date
-      required:
-        - id
-        - firstName
-        - lastName
-        - email
-        - emailVerified
+      type: object
+      description: ''
       examples:
         - id: 142
           firstName: Alice
@@ -241,29 +166,47 @@ components:
           dateOfBirth: '1997-10-31'
           emailVerified: true
           signUpDate: '2019-08-24'
-    emailallmandatory:
-      type: object
-      title: emailwithtype
-      description: Email
       properties:
-        type:
+        id:
+          type: integer
+          description: Unique identifier for the given user.
+          x-stoplight:
+            id: f3tp0ygr2r85y
+        firstName:
           type: string
-          enum:
-            - type1
-            - type2
-          description: type
-        emailaddress:
+          x-stoplight:
+            id: x51cvj2u54wdr
+        lastName:
           type: string
-          description: email address
+          x-stoplight:
+            id: x51cvj2u54wdr
+        email:
+          type: string
+          format: email
+          x-stoplight:
+            id: hcz7yq7x0tys3
+        dateOfBirth:
+          type: string
+          format: date
+          example: '1997-10-31'
+          x-stoplight:
+            id: hcz7yq7x0tys3
+        emailVerified:
+          type: boolean
+          description: Set to true if the user's email has been verified.
+          x-stoplight:
+            id: hcz7yq7x0tys3
+        createDate:
+          type: string
+          format: date
+          description: The date that the user was created.
+          x-stoplight:
+            id: 8ehul4e00motl
       required:
-        - emailaddress
-    emailallmandatory_2:
-      type: object
-      title: emailshort
-      description: Email
-      properties:
-        emailaddress:
-          type: string
-          description: email address
-      required:
-        - emailaddress
+        - id
+        - firstName
+        - lastName
+        - email
+        - emailVerified
+      x-stoplight:
+        id: nlp01pdvtxgh8
