--- a/test-3.1.yaml
+++ b/test-3.1.yaml
@@ -1,6 +1,6 @@
 openapi: 3.1.0
 x-stoplight:
-  id: n0qmwflmbzovq
+  id: j0phtjsqitrrg
 info:
   title: test-3.1
   version: '1.0'
@@ -41,7 +41,7 @@ paths:
       operationId: get-users-userId
       description: Retrieve the information of the user with the matching user ID.
       x-stoplight:
-        id: n0qmwflmbzovq
+        id: 8mbec7l8fmc5l
     patch:
       summary: Update User Information
       operationId: patch-users-userId
@@ -95,7 +95,7 @@ paths:
                   dateOfBirth: '1985-10-02'
         description: Patch user properties to update.
       x-stoplight:
-        id: 20jmwmmlebgwb
+        id: 7c6qt10w2vojw
   /user:
     post:
       summary: Create New User
@@ -151,11 +151,13 @@ paths:
         description: Post the necessary fields for the API to create a new user.
       description: Create a new user.
       x-stoplight:
-        id: 20jmwmmlebgwb
+        id: 8qbpza8gcoj9d
 components:
   schemas:
     User:
       title: User
+      x-stoplight:
+        id: hv7xvbrdqxaau
       type: object
       description: ''
       examples:
@@ -175,7 +177,7 @@ components:
         firstName:
           type: string
           x-stoplight:
-            id: x51cvj2u54wdr
+            id: l29wpb7x88eso
         lastName:
           type: string
           x-stoplight:
@@ -184,13 +186,13 @@ components:
           type: string
           format: email
           x-stoplight:
-            id: hcz7yq7x0tys3
+            id: a1850pfaifego
         dateOfBirth:
           type: string
           format: date
           example: '1997-10-31'
           x-stoplight:
-            id: hcz7yq7x0tys3
+            id: vj7b45czfuxkk
         emailVerified:
           type: boolean
           description: Set to true if the user's email has been verified.
@@ -201,12 +203,10 @@ components:
           format: date
           description: The date that the user was created.
           x-stoplight:
-            id: 8ehul4e00motl
+            id: oi9hlye8gq1kd
       required:
         - id
         - firstName
         - lastName
         - email
         - emailVerified
-      x-stoplight:
-        id: nlp01pdvtxgh8
