--- a/api.yaml
+++ b/api.yaml
@@ -4,7 +4,7 @@ x-stoplight:
 info:
   title: test2-3.0
   version: '1.0'
-  description: ''
+  description: e
 servers:
   - url: 'http://localhost:3000'
 paths:
